Added example test to fetch a survey

--- a/BO19G21/BO19G21WebApp/BO19G21WebApp.csproj
+++ b/BO19G21/BO19G21WebApp/BO19G21WebApp.csproj
@@ -187,6 +187,16 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Library.API\Library.API.csproj">
+      <Project>{CFAC7B88-C406-4C49-A302-3EF4820BE9E0}</Project>
+      <Name>Library.API</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Library.Model\Library.Model.csproj">
+      <Project>{D6C6279E-C123-48D7-88FD-600766432BCB}</Project>
+      <Name>Library.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
